resolves various issues with show/hide: - text size and line height should now be working in concert with the height of the collapsed content divs to eliminate odd display behaviors - expanded content sections are no longer constrained by a fixed height, so they will display correctly as viewport sizes are changed - updates trln_argon to latest version (v0.8.15) - resolves https://duldev.atlassian.net/browse/TRLNDSC-157 - resolves https://duldev.atlassian.net/browse/TRLNDSC-180

--- a/app/assets/stylesheets/dul_argon/search-results.scss
+++ b/app/assets/stylesheets/dul_argon/search-results.scss
@@ -303,3 +303,21 @@ div.primary-url {
   width: 100% !important;
   margin: 0 !important;
 }
+
+/* updates trln values for show/hide */
+
+#enhanced-data .content p {
+  font-size: 16px;
+  margin-bottom: 22px;
+  line-height: 22px;
+}
+
+.contracted,
+.contracted-ul {
+  margin-bottom: 22px;
+  max-height: 88px;
+}
+
+.contracted-ul {
+  max-height: 96px;
+}
